# 7396_Virus_Detection_Acceleration_Project

./: .gitignore  README.md  RUN_INSTRUCTIONS.txt  ResultsSummary.py  run_project.sh
Auxiliary/: extract_rules.py  project_a_helper_graph_1.ipynb  snort_string_to_check.json
Auxiliary/Bloom_Filter_Aux_Material/: relevant_links.txt
Data/: PlotCreator.py  Plots_PartA.xlsx  exact_matches_hex.json  length_histogram.csv  parta_data.json  parta_data_by_exactmatch.json  parta_data_by_signature.json  signatures_hist.json  threshold_histogram.csv
Data/part_b_data/: L4_G2_substrings.json  L8_G2_substrings.json
Part A - Data Process/: ContentProcessor.py  ExactMatchExtractor.py  README.md  SnortRulesParser.py  exact_matches.json
Part A - Data Process/config/: config.py
Part B - Cuckoo Hash/: CMakeLists.txt  test.cpp  test.h  utilities.cpp  utilities.h
Part B - libcuckoo version/: install_libcuckoo_unix.sh  install_libcuckoo_win.bat  install_nlohmann_json_unix.sh  run_partb_unix.sh  run_partb_win.bat
Part B - libcuckoo version/cuckoohash/: CMakeLists.txt
Part B - libcuckoo version/cuckoohash/src/: CMakeLists.txt  CustomHash.h  ExactMatches.h  Parser.h  Substring.h  cuckoohash.cpp  main.cpp
PartA_Data_Process/: ContentProcessor.py  ExactMatchExtractor.py  README.md  ResultsAnalysis.py  SnortRulesParser.py  run_parta_unix.sh  snort3-community.rules
PartA_Data_Process/config/: config.py
PartB_CuckooHash/CuckooHash/: CMakeLists.txt  CuckooHash.cpp  CuckooHash.h
PartB_Hash/: README.md  ResultsAnalysis.py  install_libcuckoo_unix.sh  install_nlohmann_json_unix.sh  run_partb_unix.sh  run_partb_unix_valgrind.sh
PartB_Hash/cuckoohash/: CMakePresets.json
PartB_Hash/cuckoohash/src/: Auxiliary.h  CMakeLists.txt  Config.h  ExactMatches.h  Parser.h  Statistics.h  Substring.h  cuckoohash.cpp  main.cpp
PartC_Aho_Corasick/: ResultsAnalysis.py  install_aho_corasick_unix.sh  install_nlohmann_json_unix.sh  run_partb_unix_valgrind.sh  run_partc_unix.sh
PartC_Aho_Corasick/aho_corasick/: CMakeLists.txt  CMakePresets.json
PartC_Aho_Corasick/aho_corasick/src/: Auxiliary.h  CMakeLists.txt  ExactMatches.h  Parser.h  Statistics.h  aho_corasick.h  aho_corasick.hpp  bstring.h  main.cpp  parta_data_by_exactmatch.json
PartD_IBLT/: README.md  ResultsAnalysis.py  iblt.py  iblt_theoretical_checks.py  run_partd_unix.sh
auxiliary/: extract_and_append_rules.sh  extract_rules.py  snort3-community.rules
auxiliary/Bloom_Filter_Aux_Material/: relevant_links.txt
auxillary/: PartB_Guide.txt  questions.txt  relevant_links.txt
partA - Data Process/: ExactMatchExtracter.py  ExactMatchExtractor.py  SnortRulesParser.py
